--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -4,12 +4,14 @@
         <title>Express / Passport</title>
         <link rel="stylesheet" href="/vendors/bootstrap.min.css">
         <link rel="stylesheet" href="/assets/styles/style.css">
-
+        <link href="https://fonts.googleapis.com/css?family=Barrio|Black+Ops+One|Creepster|Ewert|Monoton" rel="stylesheet">
         <script type="text/javascript" src="/vendors/angular.min.js"></script>
         <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
         <script type="text/javascript" src="/assets/scripts/clientapp.js"></script>
         <script type="text/javascript" src="/assets/scripts/controllers/login.controller.js"></script>
         <script type="text/javascript" src="/assets/scripts/controllers/user.controller.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
+
         <!-- <base href="/" /> -->
     </head>
 
