--- a/server/public/views/user.html
+++ b/server/public/views/user.html
@@ -1,5 +1,22 @@
-<div class="container">
-    <h1 id="welcome" class="lead">Welcome, {{uc.userName}}!</h1>
+<input class = 'contains' type="checkbox" ng-model="myCheck"> <h7>Toggle logout screen</h7>
+<div ng-hide="myCheck">
+
+<div class="contain">
+
+
+  <h1 id="welcome" class="lead">Welcome, {{uc.userName}}!</h1>
+
     <p>This is the user page!</p>
-    <button class="btn btn-default" ng-click="uc.logout()">Log Out</button>
+
+   <button class="btn btn-danger" ng-click="uc.logout()">Log Out</button></div>
 </div>
+
+<!-- starting input fields for shelf -->
+
+
+<input ng-model="uc.description" type="text" name="alias" value="" placeholder="item to add...">
+<input ng-model="uc.imgURL" type="text" name="alias" value="" placeholder="item to add...">
+<button ng-click = "uc.addItem()" class = 'btn btn-success' type="button" name="button">Add Hero</button>
+<!-- <div ng-repeat="item in uc.newItem" class='itemsAdded' id="repeat">
+  {{item}}
+</div> -->
