--- a/server/public/views/user.html
+++ b/server/public/views/user.html
@@ -1,3 +1,5 @@
+<script src="/assets/scripts/controllers/public.controller.js" charset="utf-8"></script>
+
 <input class = 'contains' type="checkbox" ng-model="myCheck"> <h7>Toggle logout screen</h7>
 <div ng-hide="myCheck">
 
