--- a/server/public/views/user.html
+++ b/server/public/views/user.html
@@ -8,7 +8,7 @@
 
   <h1 id="welcome" class="lead">Welcome, {{uc.userName}}!</h1>
 
-    <p>This is the user page!</p>
+    <h1>This is the user page!</h1>
 
    <button class="btn btn-danger" ng-click="uc.logout()">Log Out</button></div>
 </div>
